--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -96,6 +96,15 @@ body {
       border-right: 0;
     }
   }
+  .back {
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    font-size: 26px;
+    color: #fff;
+    @extend .icon;
+    @extend .icon-arrow-left;
+  }
 }
 
 .footer {
@@ -767,6 +776,14 @@ input {
   background: #fff;
 }
 
+.button-red {
+  background: #f00;
+}
+
+.button-green {
+  background: #008816;
+}
+
 .button-small {
   padding: 9px 10px;
 }
@@ -775,6 +792,20 @@ input {
   width: 100%;
   text-align: center;
   font-size: 18px;
+}
+
+.button-control {
+  border-radius: 5px;
+}
+
+.button-circle {
+  display: inline-block;
+  padding: 0;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  color: #fff;
+  border-radius: 100%;
 }
 
 .button-3d {
@@ -917,6 +948,36 @@ input {
   width: 100%;
   height: 100%;
   background: #fff;
+}
+
+/* tips */
+.tips {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #fff;
+  background: rgba(30,33,55,.9);
+}
+
+.tips-title {
+  h2 {
+    @extend .center;
+    width: 81px;
+    height: 81px;
+    line-height: 81px;
+    border: 2px solid #fff;
+    border-radius: 8px;
+  }
+}
+
+.tips-msg {
+  margin: 63px 0;
+  line-height: 30px;
+}
+
+.tips-control {
+
+  @include table-equal("div");
 }
 
 /* text */
@@ -1107,6 +1168,19 @@ input {
   content: "\e611";
 }
 
+.slide-up {
+  @include animation(slide-up .5s linear);
+}
+
 .on {
   display: block;
+}
+
+@include keyframes(slide-up, webkit moz ms o) {
+  0% {
+    @include translateY(100%);
+  }
+  100% {
+    @include translateY(0);
+  }
 }
