--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -982,6 +982,19 @@ input {
   background: #fff;
 }
 
+/* loading */
+.loading {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  line-height: 20px;
+  text-align: center;
+  background: #fff;
+  @extend .box-v
+}
+
 /* tips */
 .tips {
   width: 100%;
