--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -285,7 +285,7 @@ body {
   -moz-box-align: center;
   box-align: center; }
 
-.box-v, .page-empty {
+.box-v, .page-empty, .loading {
   display: -moz-box;
   display: -webkit-box;
   display: box;
@@ -1070,6 +1070,17 @@ input {
 .full-modal {
   width: 100%;
   height: 100%;
+  background: #fff; }
+
+/* loading */
+.loading {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  line-height: 20px;
+  text-align: center;
   background: #fff; }
 
 /* tips */
